<resources>
    <string name="app_name">I Plan(t)</string>
    <string name="hint_plant">"Plant's nickname"</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Plant in not saved because it is empty.</string>
    <string name="add_plant">Add plant</string>
    <string name="new_plant">New plant</string>
    <string name="main_photo">Your plant\'s main photo</string>
    <string name="days_between_watering">Days between watering:</string>
    <string name="your_plants">Your plants</string>
    <string name="days_between_fertilizing">Days between fertilizing:</string>
    <string name="autocomplete">Autocomplete</string>
    <string name="days_between_photographing">Days between photos:</string>
    <string name="notes">Notes</string>
    <string name="common_name">Common name</string>

    <!-- A plant's status -->
    <string name="common_name_placeholder">(%1$s)</string>
    <string name="needs_watering">Needs watering!</string>
    <string name="needs_fertilizer">Needs fertilizer!</string>
    <string name="needs_both">Needs watering and fertilizing!</string>
    <string name="dead">Dead since %1$s</string>
    <string name="edit_plant">Edit plant</string>
    <string name="plant_has_died">Plant has died</string>
    <string name="cause_of_death">Cause of death</string>
    <string name="most_recent_photo">Plant\'s most recent photo</string>
    <string name="date_of_death">Date of death</string>

    <string name="reminder_channel">reminderChannel</string>
    <string name="view_plants_history">View plant\'s history</string>
    <string name="view_plants_life">View plant\'s life</string>
    <string name="died_on">Died on %s</string>
    <string name="last_watered">Last watered:\n%s</string>
    <string name="last_fertilized">Last fertilized:\n%s</string>
    <string name="hide_dead_plants">Hide dead plants</string>
    <string name="export">Export...</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="click_a_photo_to_preview">Click a photo to preview</string>
    <string name="channel_name">plant_watering</string>
    <string name="channel_description">podlej mnie</string>
</resources>