<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/new_edit_header"
        style="@style/ActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/new_plant" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/hint_plant"
        app:startIconDrawable="@drawable/ic_plant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mtf_common_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/common_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_common_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            style="@style/EditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/plant_has_died" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/has_died_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/dead_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_death"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_death">
            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:id="@+id/date_picker_death_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cause_of_death"
            android:layout_marginTop="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="150">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_death_cause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alive_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                style="@style/EditLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/days_between_watering" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/water_picker"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                app:np_dividerColor="?android:textColor"
                app:np_dividerType="underline"
                app:np_itemSpacing="15dp"
                app:np_max="90"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="?android:textColor"
                app:np_textColor="?android:textColor" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                style="@style/EditLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/days_between_fertilizing" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/fertilizer_picker"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                app:np_dividerColor="?android:textColor"
                app:np_dividerType="underline"
                app:np_itemSpacing="15dp"
                app:np_max="90"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="?android:textColor"
                app:np_textColor="?android:textColor" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                style="@style/EditLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:text="@string/days_between_photographing" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/photo_picker"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                app:np_dividerColor="?android:textColor"
                app:np_dividerType="underline"
                app:np_itemSpacing="15dp"
                app:np_max="90"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="?android:textColor"
                app:np_textColor="?android:textColor" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/notes"
        app:counterEnabled="true"
        app:counterMaxLength="150">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>